--- a/assets/styles/root.css
+++ b/assets/styles/root.css
@@ -97,6 +97,7 @@ main {
   justify-content: center;
   align-items: center;
   width: 100%;
+  min-width: 400px;
   min-height: 100vh;
   text-align: center;
 }
@@ -121,4 +122,18 @@ main #typewrite {
   100% {
     opacity: 1;
   }
+}
+
+.go-back {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.go-forward {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-family: Arial, Helvetica, sans-serif;
 }
