--- a/assets/styles/root.css
+++ b/assets/styles/root.css
@@ -6,7 +6,6 @@
 }
 
 * {
-  overflow-y: hidden;
   -webkit-font-smoothing: antialiased;
   text-shadow: rgba(0, 0, 0, 0.01) 0 0 1px;
 }
@@ -136,4 +135,14 @@ main #typewrite {
   top: 10px;
   right: 10px;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+hr {
+  width: 50%;
+  border: 1px solid #0f0;
+  margin: 0 auto;
+}
+
+hr:hover {
+  border: 1px solid #fff;
 }
